# spot-energy-calculators

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: job-qa.yml  on-merge-to-master.yml  on-pull-requests-to-master.yml
notebooks/: ratepayer_functions.py  ratepayer_model.py  ratepayers.ipynb
saft/: entsoe_exploration.ipynb  ratepayer_functions.py  ratepayer_model.py  ratepayer_old_model.py  ratepayers.ipynb  simulate.py
saft/sample_data/: day_ahead_spot_2022_04_2024_07.csv
spot_risk_assessment/: entsoe_exploration.ipynb
src/: simulate.py
test/: energy_model_test.json  market_model_test.json  test_ratepayer_functions.py  test_ratepayer_model.py  test_simulate.py
